--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SelfControlPlanner</string>
+    <string name="add_new_plan_item">Add new plan item</string>
 </resources>
